# CCNIF

./: .gitignore  CHANGELOG.md  CITATION.cff  INSTALL.md  LICENSE  MASTER_ROADMAP.md  MASTER_STATUS.md  README.md  environment.yml  modeling_modules.txt  modeling_part2.txt  pyproject.toml  reliability_modules.txt
backup/clinical_v1/: clinical.tsv  clinical_harmonized.tsv  clinical_matched.tsv
ccnif/: config.py  gdc.py  logger.py  state.py
ccnif.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config/: analysis_config.json  paths.R  variable_registry.tsv
config/schema/: evidence_schema.json
data/transcriptomics/: Significant_DEGs.tsv  sample_design.tsv
docs/: CCNIF_MASTER_ARCHITECTURE.md  DATA_SCHEMA.md  INSTALL.md  NEXT_PHASE.md  PIPELINE.md  project_status.md  project_structure.txt  study_design.md
docs/manuscript/: Publication.md
docs/validation/: Validation.md
framework/config/: modules.json  pipeline.json
manuscript/methods/: Methods_Draft.txt
manuscript/results/: Results_Draft.txt
results/: missing_maf_patients.csv  project_state.json
scripts/: 01_merge_expression.py  02_expression_qc.py  04_download_clinical.py  05_harmonize_clinical.py  06_download_maf_manifest.py  08_build_unique_maf_manifest.py  09_find_missing_maf_patients.py  10_build_gdc_manifest.py  10_parse_maf.py  11_build_mutation_matrix.py  13_normalize_expression.py  create_expression_manifest.py  download_data.sh  query_gdc.py  run_all_drivers.R  run_ccnif.R  run_driver.R  test_state.py
tmp/: Distribution_Report.json  Model_Comparison.json  Model_Comparison.tsv
(+2827 files in other folders)
